# fpfind

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: format-check.yaml  release.yaml
docs/: develop.md  hints.md  schematic.wsg
docs/dev/: develop.md
docs/user/: migration.md  parser.md
scripts/: disable-wip.sh  generate-uv-lock.sh
scripts/hooks/: pre-push
src/fpfind/: __init__.py  _postinstall  fpfind.py  fpplot.py  freqcd.c  freqservo.py
src/fpfind/apps/: fpplot.py  generate_freqcd_testcase.py  show-timestamps  tsviz.py
src/fpfind/lib/: _logging.py  compression.py  constants.py  generate_freqcd_testcase.py  logging.py  parse_epochs.py  parse_timestamps.py  show-timestamps  show-timestamps-hex  typing.py  utils.py
tests/: conftest.py
tests/compression/: test_compression.py
tests/data/: README.md  timestamp7_c1234.Aa1.ts  timestamp7_c14_rollover.Aa0f.ts  timestamp7_c14_rollover.Aa1fX.ts  timestamp7_c14_rollover.Aa2f.ts
tests/fpfind/: test_fpfind_functional.py  test_fpfind_options.py
tests/freqcd/: test_freqcd.py  test_freqcd_correctness.py  test_freqcd_update.py
tests/parse_timestamps/: conftest.py  test_correctness.py  test_correctness_write.py  test_output_type.py
tests/parse_timestamps/cli/: test_stdio.py
