[tool.poetry]
name = "fpfind"
version = "0.0.0"
description = "Add-on implementation of frequency compensation for qcrypto."
authors = ["Xu Zifang <francium0415@gmail.com>", "Justin Peh <pehyuxiang@gmail.com>"]
maintainers = ["S-Fifteen Instruments <info@s-fifteen.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.24.1"
matplotlib = ">=3.6.3"
scipy = [
    {version = ">=1.10.0,<1.11", python = ">=3.8,<3.9"},
    {version = ">=1.10.0", python = ">=3.9"}
]
tqdm = ">=4.65.0"
configargparse = ">=1.7"

[tool.poetry.scripts]
# Poetry 1.2.0a1 required for script file reference
freqcd = {reference = "src/fpfind/freqcd", type = "file"}
freqservo = "fpfind.freqservo:main"
fpfind = "fpfind.fpfind:main"
fpplot = "fpfind.apps.fpplot:main"
parse_timestamps = "fpfind.lib.parse_timestamps:main"
parse-timestamps = "fpfind.lib.parse_timestamps:main"
generate_freqcd_testcase = "fpfind.lib.generate_freqcd_testcase:main"
generate-freqcd-testcase = "fpfind.lib.generate_freqcd_testcase:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = "v{{ base }}+{{ date.today().strftime('%Y%m%d') }}"
format-jinja-imports = [
    {module = "datetime", item = "date"},
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

